# proyecto-paralela

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  plot.sh  run.sh  run_benchmark.sh  run_profile.sh  run_raymap.sh  run_test  run_test.sh  setup.sh  test.sh
results/: profile_report.txt
results/plot/: compare_platforms.gp  plot_benchmarks.gp  plot_profiling.gp
src/: benchmark.cpp  benchmark_config.hpp  config.hpp  heightmap.cpp  heightmap.hpp  main.cpp  noise.cpp  noise.hpp  raymap_config.hpp  terrain.cpp  terrain.hpp  terrain_config.hpp  terrain_generation.cpp  terrain_generation.hpp  visuals.cpp  visuals.hpp
tests/: tests.cpp
